--- a/client/input/input.less
+++ b/client/input/input.less
@@ -11,7 +11,7 @@
 	.nick-button {
 		width: auto;
 		margin: 0;
-		padding: 10px 14px 10px 97px;
+		padding: 10px 14px 10px 91px;
 		float: left;
 		font-size: 13px;
 		font-weight: bold;
