--- a/client/tabs/tabs.less
+++ b/client/tabs/tabs.less
@@ -196,36 +196,10 @@
 }
 
 /*
-		div.row
-		{
-			margin: 0;
-			position: relative;
-		}
-
-		div.row span { line-height: 155%; }
-		div.otherRow { color: #000; background: #f3f3f3; }
-
-			div.otherRow a[rel=user-link] { text-decoration: underline; }
-			div.otherRow span.column3 { color: #9C9C9C; }
 
 			div.row[data-highlight=true] { background: palegreen; }
 			div.row[data-type=notice] { background: lavender; }
 			div.row[data-self=true] { background: linen; }
-
-			span.ht
-			{
-				display: inline-block;
-				padding-right: 10px;
-			}
-
-			div.otherRow.collapsed-head
-			{
-				background: #fff;
-				cursor: pointer;
-			}
-
-				div.otherRow.collapsed-head.open,
-				div.otherRow.collapsed-head:hover { background: #f3f3f3; }
 
 		div.row fieldset
 		{
@@ -292,15 +266,6 @@
 			color: #9C9C9C;
 		}
 		
-		div.row span.message,
-		div.row span.action
-		{
-			color: #383838;
-			white-space: pre-wrap;
-			word-wrap: break-word;
-			padding: 5px 8px 5px 19px;
-		}
-		
 		div.row span.event
 		{
 			color: #383838;
@@ -316,12 +281,6 @@
 			white-space: pre-wrap;
 			word-wrap: break-word;
 			padding: 5px;
-		}
-
-		div.row span.time
-		{
-			padding: 5px 12px 5px 8px;
-			text-align: right;
 		}
  
 		div.row span.action a { color: inherit!important; padding-right: 5px; }
