--- a/client/userlist/userlist.less
+++ b/client/userlist/userlist.less
@@ -2,7 +2,7 @@
 
 .userlist {
 	width: 172px;
-	font-size: 11px;
+	font-size: 12px;
 	background: #f9f9f9;
 	color: #333C41;
 
